--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,8 @@
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="priorwork.html" class="nav-item nav-link">Publications</a>
-                            <a href="blog.html" class="nav-item nav-link">Blog</a>
+                            <a href="research.html" class="nav-item nav-link">Dissertation Research</a>
+                            <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
