--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
 
             <!-- About Start -->
-            <div class="container bg-white pt-5">
+            <div class="container bg-light pt-5">
                 <div class="row px-3 pb-5">
                     <div class="col-md-12">
                         <div class="mb-4"> <h3>Education</h3>
