--- a/teaching.html
+++ b/teaching.html
@@ -93,13 +93,13 @@
                 
                 
                 <!-- Blog List Start -->
-                <div class="container bg-white pt-5">
+                <div class="container bg-light pt-5">
                     <div class="row blog-item px-3 pb-5">
                         <div class="col-md-5">
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -116,7 +116,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-2.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -133,7 +133,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -150,7 +150,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-4.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -167,7 +167,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-5.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
@@ -184,7 +184,7 @@
                             <img class="img-fluid mb-4 mb-md-0" src="img/blog-6.jpg" alt="Image">
                         </div>
                         <div class="col-md-7">
-                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Lorem ipsum dolor sit amet</h3>
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-light font-weight-bold">Lorem ipsum dolor sit amet</h3>
                             <div class="d-flex mb-3">
                                 <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
                                 <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
